from flex to grid, small changes, fixed gaps

--- a/style/index.css
+++ b/style/index.css
@@ -31,6 +31,11 @@
     /* background: radial-gradient(#ffffff, #d0f0c0); */
 }
 
+.header a {
+    color: #5C4033;
+    text-decoration: none;
+}
+
 .navigation__list {
     display: flex;
     flex-direction: row;
@@ -149,18 +154,25 @@ video {
     transition: all 0.4s ease-in;
 }
 
+/* .services__outer {
+    width: 100%;
+    display: flex;
+    gap: 0px;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
 .services {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    gap: 0px;
     width: 100%;
 }
 
 .services__container {
     max-width: 700px;
     width: 100%;
-    height: 480px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -197,6 +209,81 @@ video {
 .services__imageholder {
     max-width: 700px;
     min-width: 400px;
+} */
+
+.services {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-gap: 0px;
+    max-width: 100%;
+}
+
+.services__grid {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    gap: 40px;
+    background-color:#ffffff;
+    min-width: 500px;
+    overflow: hidden;
+    font-family: "Poppins", serif;
+    font-weight: 700;
+    font-style: normal;
+    font-size: 30px;
+    color: #5C4033;
+}
+
+
+.first {
+    grid-row: 1 / 2;
+    grid-column: 1 / 2;
+}
+
+.second {
+    grid-row: 1 / 2;
+    grid-column: 2 / 3;
+}
+
+.third {
+    grid-row: 1 / 2;
+    grid-column: 3 / 4;
+}
+
+.fourth {
+    grid-row: 2 / 3;
+    grid-column: 1 / 2;
+}
+
+.fifth {
+    grid-row: 2 / 3;
+    grid-column: 2 / 3;
+}
+
+.sixth {
+    grid-row: 2 / 3;
+    grid-column: 3 / 4;
+}
+
+.services__button {
+    border-radius: 5px;
+    width: 150px;
+    height: 50px;
+    background-color: #5C4033;
+    color: white;
+    border-style: none;
+    font-family: "Poppins", serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 16px;
+}
+
+.services__button:hover {
+    color:#5C4033;
+    background-color:#d0f0c0;
+    transition: all 0.4s ease-in;
 }
 
 .keepfree {
@@ -250,7 +337,7 @@ video {
 }
 
 .keepfree__button:hover {
-    color:#d0f0c0;
+    color:#FFFFFF;
     background-color:#5C4033;
     transition: all 0.4s ease-in;
 }
@@ -326,11 +413,6 @@ video {
     font-size: 15px;
 }
 
-.djimageholder {
-    object-fit: cover;
-    width: 100%;
-}
-
 .djimage {
     width: 100%;
 }
@@ -352,17 +434,3 @@ video {
     font-size: 14px;
     color: #5C4033;
 }
-
-/* 
-.gallery {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-}
-
-.gallery__image {
-    max-width: 700px;
-    max-height: 500px;
-    object-fit: cover;
-} */
